--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
+    "lucide-react": "^0.269.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.8.0",
+    "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.3",
+    "rsuite": "^5.38.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
