--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "bootstrap": "^5.3.1",
     "lucide-react": "^0.269.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
     "rsuite": "^5.38.0"
   },
