Implemented search and pagination functionality. Improved styling. Fixed some validations.

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "backend-kanban-board-task-management",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
