--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-project",
+  "name": "frontend-kanban-board-task-management",
   "private": true,
   "version": "0.0.0",
   "type": "module",
