--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,6 +12,9 @@ jobs:
   build:
 
     runs-on: self-hosted
+    defaults:
+       run:
+         working-directory: ./server/
 
     strategy:
       matrix:
@@ -25,7 +28,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: cd server
+    # - run: cd server
     - run: npm ci
     - run: |
           touch .env
