--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,5 +34,5 @@ jobs:
     - run: |
           touch .env
           echo "${{ secrets.PROD }}" > .env
-    # - run: pm2 restart Backend
+    - run: pm2 restart server
     
